# restfulgit

./: .gitignore  entrypoint.py  pyproject.toml
restfulgit/: app.py  archives.py  config.py
restfulgit/porcelain/: retrieval.py
